--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
-/generated
+/docs/
+/lib/
+/bin/
+/.shards/
+
+# Libraries don't need dependency lock
+# Dependencies will be locked in application that uses them
+/shard.lock
+
+# Test files
+/generated/
